# SequenceMSAligner

./: .clang-format  .gitignore  404.html  ALGORITHMS.html  API.html  CITATION.cff  CMakeLists.txt  DESIGN.html  Doxyfile  LICENSE  README.md  REFERENCES.html  USAGE.html  dna3.fasta  main.cpp  mkdocs.yml  sitemap.xml
.github/workflows/: deploy-docs.yml
api/: EBLOSUM62_8h.html  EBLOSUM62_8h.js  EBLOSUM62_8h_source.html  EDNAFULL_8h.html  EDNAFULL_8h.js  EDNAFULL_8h_source.html  _formulas.tex  _formulas_dark.tex  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main_8cpp.html  main_8cpp.js  navtreedata.js  navtreeindex0.js  structAlignParams.html  structAlignParams.js  structGapSearchResult.html  structGapSearchResult.js  structLENode.html  structLENode.js  structNode.html  structNode.js  structPairLib.html  structPairLib.js
api/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_2.js  functions_3.js  (+16 more)
docs/: ALGORITHMS.md  API.md  DESIGN.md  REFERENCES.md  USAGE.md
files/: dna2.fasta  prot3.fasta  prot4.fasta
search/: search_index.json
src/: EBLOSUM62.h  EDNAFULL.h  main.cpp
(+1 files in other folders)
